Tidy routes with final classes and remove unnecessary public access (#91)