@@ -1,16 +1,13 @@
 package io.avaje.jex.routes;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 
-public class UrlDecode {
+import static java.nio.charset.StandardCharsets.UTF_8;
 
-  public static String decode(String s) {
-    try {
-      return URLDecoder.decode(s.replace("+", "%2B"), "UTF-8").replace("%2B", "+");
-    } catch (UnsupportedEncodingException e) {
-      throw new RuntimeException("Not expected", e);
-    }
+final class UrlDecode {
+
+  static String decode(String s) {
+    return URLDecoder.decode(s.replace("+", "%2B"), UTF_8).replace("%2B", "+");
   }
 
 }
